Redmine 4.x upgrade: fix whitespace in hover/tooltip.
No issue #

Arvados-DCO-1.1-Signed-off-by: Ward Vandewege <ward@curii.com>

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -152,6 +152,7 @@ ul.ui-sortable {
 
 .backlog_tooltip {
   font-size: 1em;
+  white-space: normal;
 }
 
 .backlog_tooltip .header {
